turtleart.circlesquare.CircleSquare.scala.error
Compilation error:
CircleSquare:11: error: Unmatched closing brace '}' ignored here
}
^