turtleart.circlesquare.CircleSquare.scala.code
override def run() {
  for (i <- 1 to 180){
    avance(100)
    droite(90)
  }
  avance(100)
  rayon(50)
  }
}